--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="more">More >></string>
     <string name="back_icon">back icon</string>
     <string name="comics">Comics</string>
+    <string name="Series">Series</string>
+    <string name="stories">Stories</string>
+    <string name="characters">Characters</string>
+    <string name="no_desc">No description available right now. You can check the official website.</string>
 </resources>
